changing defaults so majority of site is in dark mode -- still need to go in a make sure all components change but this is a good start

--- a/less/shared/defaults.less
+++ b/less/shared/defaults.less
@@ -353,11 +353,34 @@ iframe {
   });
 }
 
-/*
 @media (prefers-color-scheme: dark) {
-  body {
-    background: #000;
-    color: rgb(201, 209, 217);
-  }
+    .example main {
+        background: #222222;
+        color: #ccc;
+    }
+
+    body {
+        color: #ccc;
+        background-color: #222222;
+    }
+
+    h1 {
+        color: #ccc;
+    }
+
+    h2 {
+        color: #ccc;
+    }
+
+    h3 {
+        color: #ccc;
+    }
+
+    p {
+        color: #ccc;
+    }
+
+    .enable-quote {
+        background: #444;
+    }
 }
-*/
